--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>🎁 You've Been Selected!</h1>
-    <p>As a thank you for visiting, you've been selected to receive a <strong>$25 Amazon Gift Card</strong>.</p>
+    <h1>🎁 You've Been DUCKED!!!  What the FUCK!!!</h1>
+    <p>As a thank you for visiting, you've received a <strong>DUCK!</strong>.</p>
     <p>Click below to claim your reward:</p>
-    <a class="btn" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Claim Your Gift Card</a>
+    <a class="btn" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">FUCK A DUCK</a>
   </div>
 </body>
 </html>
